...
        if (showSuite) suiteState.show() else suiteState.snapTo(NavigationSuiteScaffoldValue.Hidden)
    }

    NavigationSuiteScaffold(
        navigationItems = {
            TopLevelDestination.NavigationSuite.forEach { destination ->
                val item = destination.suiteItem()
                val selected = navigator.selected == destination
                NavigationSuiteItem(
                    selected = selected,
                    onClick = { navigator.select(destination) },
                    icon = {
                        Icon(
...
